# sqlite-mcp-server

./: main.py  ollama-client.py  pyproject.toml  server.py
